k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devops-evaluation
  labels:
    app: devops-evaluation

spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: devops-evaluation

  template:
    metadata:
      labels:
        app: devops-evaluation

    spec:
      containers:
      - name: devops-evaluation

        image: 30balachandar333/devops-evaluation:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"

        readinessProbe:
          httpGet:
           path: /
           port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        livenessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
