k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: devops-evaluation-service

spec:
  type: NodePort

  selector:
    app: devops-evaluation

  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
